Simple changes. Fixed some capitalization, modified statements, and change the colors. Should follow the color design for every design involved from now on.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="login-register/style.css">
-    <title>Best Aluminum Sales Corporation</title>
+    <title>Best Aluminum Sales Corp.</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="container active" id="container">
         <div class="form-container sign-up">
         <form action="">
-                <div class="form-header">Sign in to Your account</div>
+                <div class="form-header">Sign in to your Account</div>
                 <div class="input-group">
                     <input type="text" required>
                     <label for="">Email</label>
@@ -28,7 +28,7 @@
                         <input type="checkbox">
                         <p class="text">Remember me</p>
                     </div>
-                    <a href="#">Forgot Your password?</a>
+                    <a href="#">Forgot your Password?</a>
                 </div>
                 <button>Sign in</button>
             <div class="or">
@@ -95,7 +95,7 @@
             </div>
             <div class="message">
                 <div class="top">Start Here</div>
-                <div class="bot">Begin your journey by creating your account and joining our team</div>
+                <div class="bot">Sign up now to access the management system!</div>
             </div>
                 </div>
             </div>
